--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,17 +4,26 @@
     "build": "webpack --mode=production"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "mobx": "^6.6.1",
+    "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.0",
     "@babel/preset-env": "^7.19.0",
     "@babel/preset-react": "^7.18.6",
+    "@types/react": "^18.0.18",
+    "@types/react-dom": "^18.0.6",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
     "style-loader": "^3.3.1",
+    "ts-loader": "^9.3.1",
+    "typescript": "^4.8.2",
     "webpack": "^5.0.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.10.1"
